--- a/install
+++ b/install
@@ -1,17 +1,23 @@
-#!/usr/bin/env bash
+#!/bin/bash
 set -eux
 # Run with either command:
-# curl -fsSL https://raw.githubusercontent.com/yshinagawa/dotfiles/master/install | sh
-# wget -qO- https://raw.githubusercontent.com/yshinagawa/dotfiles/master/install | sh
+# curl -fsSL https://raw.githubusercontent.com/yshinagawa/dotfiles/master/install | bash
+# wget -qO- https://raw.githubusercontent.com/yshinagawa/dotfiles/master/install | bash
 
 if [ -d "$HOME/.dotfiles" ]; then
     printf "\\033[31mError:\\033[0m ~/.dotfiles already exists.\\n" >&2
     exit 1
 fi
 
-[[ -x `command -v git` ]] || sudo -E apt-get -q -y install git
-[[ -x `command -v stow` ]] || sudo -E apt-get -q -y install stow
+if !(type git > /dev/null 2>&1); then
+    sudo -E apt-get -q -y install git
+fi
 
-git clone --recursive https://github.com/yshinagawa/dotfiles.git "$HOME/.dotfiles"
+if !(type stow > /dev/null 2>&1); then
+    sudo -E apt-get -q -y install stow
+fi
 
-cd "$HOME/.dotfiles" && make link && source ~/.bash_profile
+git clone --depth 1 --recursive https://github.com/yshinagawa/dotfiles.git "$HOME/.dotfiles"
+rm "$HOME/.bashrc"
+cd "$HOME/.dotfiles" && make link && cd
+source ./.bash_profile
