--- a/install
+++ b/install
@@ -1,8 +1,8 @@
 #!/bin/bash
 set -x
 # Run with either command:
-# curl -fsSL https://raw.githubusercontent.com/yshinagawa/dotfiles/master/install | bash
-# wget -qO- https://raw.githubusercontent.com/yshinagawa/dotfiles/master/install | bash
+# curl -fsSL https://raw.githubusercontent.com/yshinagawa/dotfiles/master/install | sh
+# wget -qO- https://raw.githubusercontent.com/yshinagawa/dotfiles/master/install | sh
 
 if [ -d "$HOME/.dotfiles" ]; then
     printf "\\033[31mError:\\033[0m ~/.dotfiles already exists.\\n" >&2
@@ -19,5 +19,4 @@ fi
 
 git clone --recursive --depth=1 https://github.com/yshinagawa/dotfiles.git "$HOME/.dotfiles"
 rm "$HOME/.bashrc"
-cd "$HOME/.dotfiles" && make link && cd
-source ./.bash_profile
+cd "$HOME/.dotfiles" && make link
