Move prompt configrations to .bash_profile

--- a/install
+++ b/install
@@ -20,3 +20,5 @@ fi
 git clone --recursive --depth=1 https://github.com/yshinagawa/dotfiles.git "$HOME/.dotfiles"
 rm "$HOME/.bashrc"
 cd "$HOME/.dotfiles" && make link
+
+bash -i --login
