--- a/install
+++ b/install
@@ -9,25 +9,10 @@ if [ -d "$HOME/.dotfiles" ]; then
     exit 1
 fi
 
-function update_git() {
-    sudo add-apt-repository -y ppa:git-core/ppa
-    sudo apt update
-    sudo apt-get -q -y install git
-}
-
-# update git for --shallow-submodules option
-if ! (type git > /dev/null 2>&1); then
-    update_git
-else
-    IFS=" " read -r -a vers <<< "$(git --version | sed -E 's/[^0-9]*([0-9]+)[^0-9]*/\1 /g')"
-    # major < 2
-    if [[ ${vers[0]} -lt 2 ]]; then
-        update_git
-    # major == 2 && minor < 9
-    elif [[ ${vers[0]} -eq 2 ]] && [[ ${vers[1]} -lt 9 ]]; then
-        update_git
-    fi
-fi
+# install latest git
+sudo add-apt-repository -y ppa:git-core/ppa
+sudo apt update
+sudo apt-get -q -y install git
 
 # install basic tools
 tools=("make" "stow" "nkf")
