--- a/install
+++ b/install
@@ -9,6 +9,8 @@ if [ -d "$HOME/.dotfiles" ]; then
     exit 1
 fi
 
+printf "\\033[32mStart environment setup.\\033[0m\\n"
+
 # install latest git
 sudo add-apt-repository -y ppa:git-core/ppa
 sudo apt update
@@ -27,9 +29,21 @@ done
 sudo apt-get -q -y install shellcheck \
                            silversearcher-ag
 
+# clone repository
 git clone --recursive --depth 1 https://github.com/yshinagawa/dotfiles.git "$HOME/.dotfiles"
 
 [ -e "$HOME/.bashrc" ] && rm "$HOME/.bashrc"
+
+# symlink to home
 cd "$HOME/.dotfiles" && make link
+
+# install fzf
 "$HOME"/.bash/fzf/install --bin --no-update-rc > /dev/null 2>&1
-[[ -e "$HOME"/.bash/fzf/bin/fzf ]] && [[ -x "$HOME"/.bash/fzf/bin/fzf ]] && echo "fzf was successfully installed."
+if ! [[ -x "$HOME"/.bash/fzf/bin/fzf ]]; then
+    printf "\\033[31mError:\\033[0m Install fzf failed.\\n" >&2
+    exit 1
+fi
+
+if [ -d "$HOME/.dotfiles" ]; then
+    printf "\\033[32mSuccess:\\033[0m All done!\\n"
+fi
