--- a/install
+++ b/install
@@ -25,6 +25,10 @@ for i in "${tools[@]}"; do
     fi
 done
 
+if [ -f /usr/share/bash-completion/completions/git ]; then
+    sudo ln -s /usr/share/bash-completion/completions/git /etc/bash_completion.d/git
+fi
+
 # install development tools
 sudo apt-get -q -y install shellcheck \
                            silversearcher-ag
