--- a/install
+++ b/install
@@ -1,5 +1,5 @@
 #!/bin/bash
-set -e
+set -ex
 # Run with either command:
 # curl -fsSL https://raw.githubusercontent.com/yshinagawa/dotfiles/master/install | bash
 # wget -qO- https://raw.githubusercontent.com/yshinagawa/dotfiles/master/install | bash
