--- a/install
+++ b/install
@@ -1,13 +1,35 @@
 #!/bin/bash
-set -ex
+set -e
 # Run with either command:
 # curl -fsSL https://raw.githubusercontent.com/yshinagawa/dotfiles/master/install | bash
 # wget -qO- https://raw.githubusercontent.com/yshinagawa/dotfiles/master/install | bash
+
+branch="master"
+debug=
+
+for opt in "$@"; do
+    case $opt in
+        -d | --debug )
+            debug=1
+            ;;
+        *)
+            printf "\\033[31mAuto setup:\\033[0m Error. Unknown option: %s\\n" "$opt" >&2
+            exit 1
+            ;;
+    esac
+done
+
+if [[ $debug -eq 1 ]]; then
+    set -x
+    printf "\\033[31mAuto setup:\\033[0m Debug mode.\\n"
+    branch="debug"
+fi
 
 if [ -d "$HOME/.dotfiles" ]; then
     printf "\\033[31mAuto setup:\\033[0m Error. ~/.dotfiles already exists.\\n" >&2
     exit 1
 fi
+
 
 printf "\\033[32mAuto setup:\\033[0m Start.\\n"
 
@@ -17,7 +39,7 @@ sudo apt update
 sudo apt-get -q -y install git
 
 # clone repository
-git clone --recursive --depth 1 https://github.com/yshinagawa/dotfiles.git "$HOME/.dotfiles"
+git clone -b $branch --recursive --depth 1 https://github.com/yshinagawa/dotfiles.git "$HOME/.dotfiles"
 
 . "$HOME/.dotfiles/setup.sh"
 
