--- a/install
+++ b/install
@@ -41,6 +41,6 @@ sudo apt-get -q -y install git
 # clone repository
 git clone -b $branch --recursive --depth 1 https://github.com/yshinagawa/dotfiles.git "$HOME/.dotfiles"
 
-. "$HOME/.dotfiles/setup.sh"
+./setup.sh
 
 printf "\\033[32mAuto setup:\\033[0m All done!\\n"
